# ai_tool

./: README.md
.codex-plugin/: plugin.json
skills/skill-creator-for-stark/: Makefile  README.md  SKILL.md  pyproject.toml
skills/skill-creator-for-stark/evals/: skill-creator-for-stark.eval.md  skill-creator-for-stark.eval.yaml
skills/skill-creator-for-stark/evals/01-create-skill-judge/: case.yaml
skills/skill-creator-for-stark/history/: 20260626-skill-feedback-logging.md  20260627-agent-skill-creator-eval-model.md  20260627-agent-skill-creator-eval-scorecard.json  20260627-feedback-ai-logging-v2-feedback-backport.md  20260627-feedback-processing-ledger-minimal.md  20260628-case-based-eval-suite-migration.md  20260628-self-eval-cases-restore.md  20260628-upstream-test-import.md  20260630-user-scenario-eval-entrypoints.md
skills/skill-creator-for-stark/references/: deterministic-workflow-rules.md  eval-terminology-glossary.md  file-format.md  skill-authoring-rules.md  skill-eval-authoring-rules.md  skill-feedback-logging-rules.md  skill-quality-rubric-evaluation.md  subagent-parallelization-patterns.md  trigger-history-rules.md
skills/skill-creator-for-stark/scripts/: check_eval_contract_docs.py  check_pipeline.py  run_evals.py  run_evals_template.py  run_llm_judge.py  run_pipeline.py  test.sh  validate-quality-scorecard.py  validate-skill-package.py  verify_llm_judge_state.py
skills/skill-creator-for-stark/templates/: SKILL.template.md  eval-spec.template.md  feedback-log.template.md  skill-output-template.md  skill-quality-scorecard.template.json
(+161 files in other folders)
