[project]
name = "skill-creator-for-stark"
version = "1.5.0"
description = "Portable eval/runtime harness for the skill-creator-for-stark package."
requires-python = ">=3.14,<3.15"
dependencies = []

[dependency-groups]
dev = [
    "ruff>=0.15.20",
]

[tool.uv]
package = false

[tool.ruff]
line-length = 160
target-version = "py314"

[tool.ruff.lint]
select = ["E", "F", "W", "C901"]
ignore = ["E501"]

[tool.ruff.lint.mccabe]
max-complexity = 30
