[project]
name = "skill-creator-for-stark"
version = "1.5.0"
description = "Portable eval/runtime harness for the skill-creator-for-stark package."
requires-python = ">=3.14,<3.15"
dependencies = []

[dependency-groups]
dev = [
    "complexipy>=6.0.0",
    "lizard>=1.23.0",
    "ruff>=0.15.20",
]

[tool.uv]
package = false

[tool.ruff]
line-length = 160
target-version = "py314"

[tool.ruff.lint]
select = ["E", "F", "W", "C901", "PLR0915"]

[tool.ruff.lint.mccabe]
max-complexity = 10

[tool.ruff.lint.pylint]
max-statements = 15
